multiplayer/multiplayer-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  # the name here should match the name of the Service
  name: multiplayer-service
subsets:
  - addresses:
      - ip: 192.0.2.42
    ports:
      - port: 4000
