multiplayer/multiplayer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multiplayer-service
  labels:
        app: multiplayer
spec:
  selector:
    app: multiplayer
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  type: NodePort
  ports:
    - name: app
      protocol: TCP
      port: 8080
      nodePort: 30400
      targetPort: 4000
