multiplayer/multiplayer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: cluster.bitsnake.win
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: multiplayer-service
            port:
              number: 4000
